tasky-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: wiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: wiz-admin
      containers:
        - name: wiz-app
          image: 539247471350.dkr.ecr.us-east-1.amazonaws.com/wiz-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
