tasky-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: wiz
spec:
  selector:
    app: tasky
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
